--- a/photographyMidterm.html
+++ b/photographyMidterm.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="website_icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="bwsyWebIcon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <title>
@@ -50,8 +50,8 @@
 
     <main>
         <main_row>
-            <img src="images/mt_006.jpg" alt="rain on window" height="400">
-            <img src="images/mt_002.jpg" alt="window" height="300">
+            <img src="photos/mt006.jpg" alt="rain on window" height="400">
+            <img src="photos/mt002.jpg" alt="window" height="300">
         </main_row>
 
         <text_row style="padding: 0px 5px 100px">
@@ -67,11 +67,11 @@
                 Steal some covers, <br>
                 share some skin
             </p>
-            <img src="images/mt_001.jpg" alt="someone in bed" height="300">
+            <img src="photos/mt001.jpg" alt="someone in bed" height="300">
         </main_row>
         
         <main_row>
-            <img src="images/mt_010.jpg" alt="fence" height="400">
+            <img src="photos/mt010.jpg" alt="fence" height="400">
             <p>
                 In darkness, <br>
                 she is all I see
@@ -87,8 +87,8 @@
         </text_row>
 
         <main_row>
-            <img src="images/mt_007.jpg" alt="branch" height="300">
-            <img src="images/mt_009.jpg" alt="branches" height="300">
+            <img src="photos/mt007.jpg" alt="branch" height="300">
+            <img src="photos/mt009.jpg" alt="branches" height="300">
         </main_row>
 
         <text_row></text_row>
@@ -101,7 +101,7 @@
                 Come and rest <br>
                 your bones with me
             </p>
-            <img src="images/mt_008.jpg" alt="empty bed" height="300">
+            <img src="photos/mt008.jpg" alt="empty bed" height="300">
         </main_row>
 
         <text_row></text_row>
@@ -113,7 +113,7 @@
         </text_row>
         
         <main_row>
-            <img src="images/mt_005.jpg" alt="pink flower" height="300">
+            <img src="photos/mt005.jpg" alt="pink flower" height="300">
             <p>
                 There's a flower <br>
                 in your hair<br> <br>
@@ -124,8 +124,8 @@
         </main_row>
 
         <main_row>
-            <img src="images/mt_004.jpg" alt="orange flower" height="300">
-            <img src="images/mt_003.jpg" alt="yellow flower" height="400">            
+            <img src="photos/mt004.jpg" alt="orange flower" height="300">
+            <img src="photos/mt003.jpg" alt="yellow flower" height="400">            
         </main_row>
 
         <text_row></text_row>
