--- a/photographyMidterm.html
+++ b/photographyMidterm.html
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="bwsyWebIcon.png">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <script src="script.js"></script>
 
     <title>
         Sunday Morning by Maroon 5
@@ -18,18 +20,7 @@
 
 <body>
     <main style="color: #670000">
-        <script>
-            function togglePlay() {
-                var tune = document.getElementById("sm-m5");
-
-                if (tune.paused) {
-                    tune.play();
-                } else {
-                    tune.pause();
-                }
-            }
-        </script>
-        <audio id="sm-m5" src="Sunday Morning - Maroon 5.mp3"></audio>
+        <audio id="sm-m5" src="maroon5SundayMorning.mp3"></audio>
 
         <p style="font-size: 60px; color: #670000">
             <b>SUNDAY MORNING</b>
@@ -42,7 +33,7 @@
 
     <main style="color: #670000; font-size: 35px;">
 
-        <i class="fa fa-play-circle-o" height="45px" onclick="togglePlay()"></i>
+        <i id="playButton" class="fa fa-play" height="45px" onclick="togglePlay()"></i>
         
     </main>
         
